--- a/src/Services/Service.css
+++ b/src/Services/Service.css
@@ -5,6 +5,9 @@
   z-index: 0;
   padding-bottom: 15px;
   font-family: sans-serif;
+
+  font-family: "Roboto Slab", sans-serif;
+  margin: 60px 0;
 }
 .cardinfo {
   display: flex;
