--- a/src/Services/CardService/CardService.css
+++ b/src/Services/CardService/CardService.css
@@ -2,9 +2,9 @@
   object-fit: contain;
   width: 300px;
   height: auto;
+  margin-right: 20px;
   border: 2px solid green;
   transition: transform 450ms;
-  margin: 10px 50px;
 }
 .service_Card:hover {
   transform: scale(1.08);
