--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,41 +1,57 @@
 .about {
   display: flex;
   justify-content: space-between;
-  min-height: 500px;
+  min-height: 720px;
+  /* height: auto; */
   width: 100%;
   background-color: transparent;
   position: relative;
   overflow: hidden;
 }
+@media screen and (max-width: 800px) {
+  .about {
+    flex-direction: column-reverse;
+    height: 800px;
+  }
 
-.about::before {
-  content: "";
-  background-color: #fff;
-  position: absolute;
-  left: -80px;
-  bottom: -200px;
-  height: 250px;
-  width: 60%;
-  transform: rotate(12deg);
+  .detail {
+    width: 100%;
+  }
+
+  .detail .about__myself {
+    margin: 0 0 0 0!important;
+    width: 100% !important;
+   text-align: center !important;
+  }
+
+  .pic {
+    width: 100% !important;
+    height: 40% !important;
+    text-align: center !important;
+
+
+  }
+
+  .pic img {
+    height: 300px !important;
+    width: 300px !important;
+    margin: 50px 0 !important;
+  }
 }
-
-.about::after {
-  content: "";
-  background-color: #fff;
-  position: absolute;
-  right: -80px;
-  bottom: -200px;
-  height: 250px;
-  width: 60%;
-  transform: rotate(-12deg);
-}
-
 .detail {
   flex: 0.6;
-  text-align: center;
   margin: auto;
   color: white;
   font-weight: 1000;
+}
+
+.detail .about__myself {
+  float: right;
+  text-align: left;
+  margin: 0 100px;
+  width: 300px;
+
+  margin-right: 20%;
 }
 .detail .btn {
   padding: 20px 20px;
@@ -48,11 +64,54 @@
 .pic {
   flex: 0.4;
   opacity: 0.7;
+  margin: auto;
+  /* margin-top: 100px; */
 }
 
 .pic img {
   height: 350px;
   width: 350px;
-  margin: 100px;
+  margin: auto;
   border-radius: 50%;
+}
+
+/* WAVE */
+.about .wave {
+  position: absolute;
+  width: 100%;
+  height: 143px;
+  bottom: 0;
+  left: 0;
+  background: url("./wave.png");
+  animation: animate 10s linear infinite;
+}
+
+.about .wave::before {
+  content: "";
+  width: 100%;
+  height: 143px;
+  background: url("./wave.png");
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+  animation: animate-reverse 10s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    background-position: 0;
+  }
+  100% {
+    background-position: 1360px;
+  }
+}
+
+@keyframes animate-reverse {
+  0% {
+    background-position: 1360px;
+  }
+  100% {
+    background-position: 0;
+  }
 }
