--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
   padding: 0;
 }
 
+body {
+  background: #000;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
