--- a/src/Services/Service.css
+++ b/src/Services/Service.css
@@ -4,30 +4,136 @@
 }
 .service .heading {
   font-size: 50px;
+  display: inline-block;
+  padding: 10px 40px;
+  border-bottom: 2px solid #623ed9;
+  padding-bottom: 15px;
+  /* width: 20px; */
   line-height: 62px;
   color: #001d38;
-  z-index: 0;
-  padding-bottom: 15px;
   font-family: sans-serif;
-
+  z-index: 1;
   font-family: "Roboto Slab", sans-serif;
-  margin: 60px 0;
+  margin-top: 60px;
 }
-.service .project_info {
+
+.service .service_info {
   display: flex;
   overflow-x: scroll;
   overflow-y: hidden;
   justify-content: space-between;
-  margin: auto;
-  padding: 40px;
-  height: 400px;
-
-  /* width: 100%; */
+  padding: 70px;
+  height: auto;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  /* z-index: -1; */
 }
-.project .project_info::-webkit-scrollbar {
+.project .service_info::-webkit-scrollbar {
   display: none;
 }
 
 /* For CARD FLIP ONLY */
+
+.service__card {
+  position: relative;
+  object-fit: contain;
+  min-width: 330px !important;
+  height: 420px;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  text-align: center;
+  margin-right: 100px;
+}
+
+.service__card .face {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  transition: 1s ease-in-out;
+  transform: perspective(500px) rotateY(0deg);
+  z-index: 4;
+  border: 1px solid rgba(155, 150, 155, 0.5);
+}
+
+.service__card .face img {
+  width: 100%;
+  height: 60%;
+}
+
+.service__card:hover .face.front {
+  transform: perspective(500px) rotateY(180deg);
+}
+
+.service__card .face.back {
+  text-align: center;
+}
+
+.service__card:hover .face.back {
+  transform: perspective(500px) rotateY(360deg);
+}
+
+.service__card .back {
+  text-align: center;
+  border: 1px solid #623ed9;
+  transform: perspective(500px) rotateY(180deg);
+}
+
+.service__card .back h3 {
+  font-family: "Roboto Slab", sans-serif;
+  font-size: 25px;
+  margin: auto;
+  margin-top: 20px;
+  color: #000;
+  opacity: 0.68;
+  border-bottom: 1px solid rgba(155, 150, 155, 0.5);
+  width: 85%;
+  padding-bottom: 12px;
+}
+
+.service__card .back p {
+  font-family: "Muli", sans-serif;
+  font-size: 15px;
+  margin: auto;
+  margin-top: 20px;
+  color: #000;
+  opacity: 0.55;
+  width: 75%;
+  padding-bottom: 12px;
+}
+
+/* CARDS STYLING  */
+
+.service__card .face.front .Project_name {
+  margin-top: 30px;
+}
+
+.service__card .back .service__services {
+  width: 100%;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.service__card .back .service__services span {
+  font-size: 28px;
+  width: 80px;
+  padding: 10px 18px;
+  color: #34568B;
+  /* color: #6B5B95; */
+  /* color: #009B77; */
+  /* color: #5B5EA6; */
+}
+
+@media screen and (max-width: 800px) {
+  .service__card {
+    min-width: 290px !important;
+    height: 390px !important;
+  }
+
+  .service .heading {
+    margin-bottom: 30px !important;
+  }
+}
